Slightly more worky files

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
       <div id="player1-display" class="hidden">
         <div id="player1-choices">
-          <h3 classs="player-choice" data-choice="1">Rock</h3>
-          <h3 classs="player-choice" data-choice="2">Paper</h3>
-          <h3 classs="player-choice" data-choice="3">Scissors</h3>
+          <button class="btn btn-primary player-choice" data-choice="1">Rock</button>
+          <button class="btn btn-primary player-choice" data-choice="2">Paper</button>
+          <button class="btn btn-primary player-choice" data-choice="3">Scissors</button>
         </div>
 
         <div id="player1-selection" class="hidden">
@@ -68,9 +68,9 @@
 
       <div id="player2-display" class="hidden">
         <div id="player2-choices">
-          <h3 classs="player-choice" data-choice="1">Rock</h3>
-          <h3 classs="player-choice" data-choice="2">Paper</h3>
-          <h3 classs="player-choice" data-choice="3">Scissors</h3>
+          <button class="btn btn-primary player-choice" data-choice="1">Rock</button>
+          <button class="btn btn-primary player-choice" data-choice="2">Paper</button>
+          <button class="btn btn-primary player-choice" data-choice="3">Scissors</button>
         </div>
 
         <div id="player2-selection" class="hidden">
