--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
   
 </body>
 
-  <script src="./assets/javascript/game.js"></script>
+  <script src="./assets/javascript/game2.js"></script>
 
 </html>
