--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h3 id="player1-name">Waiting for Player 1</h2>
 
       <div id="player1-display" class="hidden">
-        <div id="player1-choices">
+        <div id="player1-choices" class="hidden">
           <button class="btn btn-primary player-choice" data-choice="1">Rock</button>
           <button class="btn btn-primary player-choice" data-choice="2">Paper</button>
           <button class="btn btn-primary player-choice" data-choice="3">Scissors</button>
@@ -60,14 +60,14 @@
     </div>
 
     <div id="result" class="col-sm-4 text-center game-field-box">
-      <h2 id="game-result"></h2>
+      <h2 id="game-result" class="hidden">This is a Placeholder</h2>
     </div>
 
     <div id="player2" class="col-sm-4 text-center game-field-box">
       <h3 id="player2-name">Waiting for Player 2</h2>
 
       <div id="player2-display" class="hidden">
-        <div id="player2-choices">
+        <div id="player2-choices" class="hidden">
           <button class="btn btn-primary player-choice" data-choice="1">Rock</button>
           <button class="btn btn-primary player-choice" data-choice="2">Paper</button>
           <button class="btn btn-primary player-choice" data-choice="3">Scissors</button>
