Changed my javascript sources

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div id="player1-stats" class="hidden">
-        <p>Wins: <span id="player1-wins">0</span> Loses: <span id="player1-losses"></span></p>
+        <p>Wins: <span id="player1-wins">0</span> Loses: <span id="player1-losses">0</span></p>
       </div>
     </div>
 
@@ -79,7 +79,7 @@
       </div>
 
       <div id="player2-stats" class="hidden">
-        <p>Wins: <span id="player1-wins">0</span> Loses: <span id="player1-losses"></span></p>
+        <p>Wins: <span id="player2-wins">0</span> Loses: <span id="player2-losses">0</span></p>
       </div>
     </div>
 
@@ -102,6 +102,9 @@
   
 </body>
 
-  <script src="./assets/javascript/game2.js"></script>
+  <script src="./assets/javascript/globalvar.js"></script>  
+  <script src="./assets/javascript/player.js"></script>
+  <script src="./assets/javascript/game3.js"></script>
+  <script src="./assets/javascript/main.js"></script>
 
 </html>
