--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </form>
       </div>
       <div id="game-text" class="hidden">
-        <h2 id="game-text-display"></h2>
+        <h2 id="game-text-display">NOTHING TO SEE HERE</h2>
       </div>
     </div>
     <br>
