--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 
 <div class="container-fluid">
 
+  <!-- Main Header/Title -->
   <div class="row" id="title">
     <div class="col-sm-8 col-sm-offset-2 text-center">
       <h1>RPS: SCISSORS PAPER ROCK</h1>
     </div>
   </div>
 
+  <!-- Name Entry -->
   <div class="row">
     <div id="name-game-text" class="col-sm-8 col-sm-offset-2 text-center">
       <div class="form-inline" id="name-entry">
@@ -40,7 +42,9 @@
     <br>
   </div>
 
+  <!-- Main Game field -->
   <div class="row" id="game-field">
+    <!-- Player 1 Box -->
     <div id="player1" class="col-sm-3 col-sm-offset-1 text-center game-field-box">
       <h3 id="player1-name">Waiting for Player 1</h2>
 
@@ -64,10 +68,12 @@
       </div>
     </div>
 
+    <!-- Results Box -->  
     <div id="result" class="col-sm-2 col-sm-offset-1 text-center game-field-box">
       <h2 id="game-result" class="hidden">This is a Placeholder</h2>
     </div>
 
+    <!-- Player 2 Box -->
     <div id="player2" class="col-sm-3 col-sm-offset-1 text-center game-field-box">
       <h3 id="player2-name">Waiting for Player 2</h2>
 
@@ -94,7 +100,8 @@
   </div>
 
   <br><br>
-
+  
+  <!-- Chat Box -->
   <div class="row" id="chat-field">
     <div class="col-sm-10 col-sm-offset-1">
       <div class="form-group">
